2002-05-10  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/*: split oprofpp_util.cpp, oprofpp.h to these ..
	* pp/samples_file.cpp: new file
	* pp/samples_file.h: new file
	* pp/op_bfd.cpp: new file
	* pp/opbfd.h: new file

	* pp/*: add a symbol_index_t typedef
	
2002-05-10  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/srcdoc/Makefile: always clean before building
	* doc/srcdoc/Doxyfile: ehance file filtering

	* pp/oprofpp.h: small typo fix

2002-05-10  Philippe Elie  <phil.el@wanadoo.fr>	

	* pp/oprofpp.h:
	* pp/oprofpp.cpp:
	* pp/oprofpp_util.cpp:
	* pp/samples_container.cpp: generalize infrastucture for symbol
	  vma/size

	* pp/op_time.cpp: allow to exclude symbol with op_time -l

2002-05-09  John Levon  <moz@compsoc.man.ac.uk>

	* doc/xhtml-chunk.xsl:
	* doc/xhtml-common.xsl:
	* doc/xhtml.xsl:
	* doc/Makefile.in: some small improvements
 
	* doc/src/doc/Doyxfile: add FIXME

	* gui/oprof_start.cpp:
	* libop/op_events_desc.h:
	* libop/op_events_desc.c:
	* libutil/filename_match.h: 
	* oprof_report/oprofpp_view.h: 
	* pp/op_time.cpp: 
	* pp/opp_symbol.h:
	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp:
	* pp/samples_container.cpp: 
	* pp/samples_container.h: more doxygen etc. fixes
 
2002-05-08  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* pp/op_symbol.cpp: better column handling with oprofpp -L

2002-05-08  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/Makefile.in:
	* gui/Makefile.in:
	* pp/Makefile.in:
	* utils/Makefile.in: fix make uninstall

2002-05-08  Philippe Elie  <phil.el@wanadoo.fr>
	
	* pp/opf_filter.cpp: move to ...
	* pp/op_to_source.cpp:
	* pp/opf_container.cpp: move to ..
	* pp/samples_container.cpp:
	* pp/opf_filter.h: move to ...
	* pp/samples_container.h:
	* pp/Makefile.in:
	* pp/.cvsignore: update

	* oprof_report/hotspotview.cpp:
	* oprof_report/hotspotview.h:
	* oprof_report/op_view.h:
	* oprof_report/oprof_report.cpp:
	* oprof_report/oprof_report.h:
	* oprof_report/oprof_view.cpp:
	* oprof_report/oprof_view.h:
	* pp/op_time.cpp: